[#37] Make rest-tck run with JDK 9+