@@ -56,12 +56,20 @@
 
   </dependencies>
 
+  <properties>
+    <!-- this is for running the tests on JDK9+ where we add JAXB to the test's class path manually -->
+    <jaxb.version>2.3.1</jaxb.version>
+  </properties>
+
 
   <profiles>
     <profile>
       <id>wildfly-servlet</id>
       <activation>
-        <activeByDefault>true</activeByDefault>
+        <property>
+          <!-- use this rather than activeByDefault due to https://issues.apache.org/jira/browse/MNG-4917 -->
+          <name>!noWildflyServlet</name>
+        </property>
       </activation>
       <dependencies>
         <dependency>
@@ -75,6 +83,9 @@
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-surefire-plugin</artifactId>
             <configuration>
+              <systemProperties>
+                <jboss.options>${jboss.extra.opts}</jboss.options>
+              </systemProperties>
               <environmentVariables>
                 <JBOSS_HOME>${project.build.directory}/wildfly-servlet-${version.wildfly}</JBOSS_HOME>
               </environmentVariables>
@@ -107,6 +118,27 @@
           </plugin>
         </plugins>
       </build>
+    </profile>
+    <profile>
+      <id>jdk9plus</id>
+      <activation>
+        <jdk>[9,)</jdk>
+      </activation>
+      <properties>
+        <jboss.extra.opts>--add-modules java.se</jboss.extra.opts>
+      </properties>
+      <dependencies>
+        <dependency>
+          <groupId>com.sun.xml.bind</groupId>
+          <artifactId>jaxb-impl</artifactId>
+          <version>${jaxb.version}</version>
+        </dependency>
+        <dependency>
+          <groupId>javax.xml.bind</groupId>
+          <artifactId>jaxb-api</artifactId>
+          <version>${jaxb.version}</version>
+        </dependency>
+      </dependencies>
     </profile>
   </profiles>
 
